welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: value nbMotif
  if (nbMotif != 0){
      ^PatternPicture:3: error: not found: value nbMotif
    if (nbMotif == 2) {
        ^PatternPicture:8: error: not found: value nbMotif
    } else if (nbMotif == 3) {
               ^PatternPicture:10: error: not found: value nbMotif
    } else if (nbMotif == 4) {
               ^PatternPicture:29: error: value && is not a member of Unit
    marquerSol() && gauche();
                 ^PatternPicture:41: error: value && is not a member of Unit
  marquerSol() && gauche();
               ^